<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scale</string>
    <string name="title_splash">how about my weight?</string>
    <string name="spinner_initialset">Height</string>
    <string name="spinner_txt_initialset">Height</string>
    <string name="checkbox_man_initialset">Male</string>
    <string name="checkbox_woman_initialset">Female</string>
    <string name="checkbox_txt_initialset">Gender</string>
    <string name="button_initialset">Weight measurement start</string>
    <string name="text_example">Please put the smartphone in the following manner \nfor accurate measurement.</string>
    <string name="text_example_next_step">Takes you to the page where you can measure your weight \nif you touch the screen of a smartphone.</string>
    
    <string name="scale_notice_restart">Do not move the device during measurement\nPlease start again from the beginning</string>
    <string name="scale_notice_warn">Please put your phone horizontally</string>
    <string name="scale_calculate_start">Start measuring</string>
	<string name="scale_calculate_text">Did you think\ncan be measured\nin body weight really?</string>
    <string name="scale_calculate_now">measuring.....</string>
    <string name="scale_surprise_comment">cheat your friends now</string>
    
	<string name="realize_wait">Please wait</string>
    <string name="realize_share_text">It must also share the application in order to see the photos of others.</string>
    <string name="realize_share_app_btn">Share</string>
    <string name="realize_share_app_text_title">Recommend</string>
    <string name="realize_share_app_text">Let\'s measure the weight\neasily with smartphone\nIt will be more accurate\nif with a friend</string>
    <string name="realize_share_mypicture_btn">see the silly\'s</string>
    <string name="realize_share_kakaotalk_not_install">Kakaotalk is not installed</string>
    <string name="realize_share_kakaoStory_not_install">Kakaostory is not installed</string>
    <string name="realize_share_mypicture_upload_fail">uploading failed.\ntry again</string>
    <string name="realize_share_mypicture_uploading">uploading....</string>
    <string name="realize_share_mypicture_alert_title">It must also share their photos\nin order to see \nthe photos of others.</string>
    <string name="realize_share_mypicture_alert_confirm">Share</string>
    <string name="realize_share_mypicture_alert_cancel">Cancel</string>
    
    <string name="realize_mypicture_reset_btn">Initialization</string>
	<string name="realize_mypicture_reset_text">Measuring the weight again.\nTry to measure the weight of a friend!</string>
	<string name="realize_alert_progress">Progress</string>
    
    <string name="realize_shared_list_sex">Gender : </string>
    <string name="realize_shared_list_weight">weight : </string>
    <string name="realize_shared_list_alert_language">Language : </string>
    
    <string name="realize_close_sharedlist_btn">my picture</string>

    <!-- template 
    <string name="realize_share_mypicture_alert_"></string> 
    -->

    <string-array name="height">
        <item>150</item>
        <item>151</item>
        <item>152</item>
        <item>153</item>
        <item>154</item>
        <item>155</item>
        <item>156</item>
        <item>157</item>
        <item>158</item>
        <item>159</item>
        <item>160</item>
        <item>161</item>
        <item>162</item>
        <item>163</item>
        <item>164</item>
        <item>165</item>
        <item>166</item>
        <item>167</item>
        <item>168</item>
        <item>169</item>
        <item>170</item>
        <item>171</item>
        <item>172</item>
        <item>173</item>
        <item>174</item>
        <item>175</item>
        <item>176</item>
        <item>177</item>
        <item>178</item>
        <item>179</item>
        <item>180</item>
        <item>181</item>
        <item>182</item>
        <item>183</item>
        <item>184</item>
        <item>185</item>
        <item>186</item>
        <item>187</item>
        <item>188</item>
        <item>189</item>
        <item>190</item>
        <item>191</item>
        <item>192</item>
        <item>193</item>
        <item>194</item>
        <item>195</item>
        <item>196</item>
        <item>197</item>
        <item>198</item>
        <item>199</item>
    </string-array>

</resources>
